--- a/21.12-moviethingy/index.html
+++ b/21.12-moviethingy/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>IMDB-hoax</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="container header__main">
 
@@ -15,19 +17,19 @@
         <!-- <form class="form__todo-title form__todo-subtitle" onsubmit="onFormSubmit(); return false;"> -->
 
 
-            <span>
-<input type="search" name="title" id="title">
-<input type="search" name="genre" id="genre">
+        <span>
+            <input type="search" name="title" id="title" placeholder="Title">
+            <!-- <input type="search" name="genre" id="genre"> -->
 
 
-            </span>    
-            <button class="movie__search" id="newMovie" onclick="getMovieFact()">Search</button>
+        </span>
+        <button class="movie__search" id="newMovie">Search</button>
 
-</form>
+        </form>
 
-    
-        
-<div class="movie__container" id="movie-container"></div>
+
+
+        <div class="movie__container" id="movie-container"></div>
     </main>
     <footer class="container footer__main">
 
@@ -36,4 +38,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
